--- a/le_journal_des_entreprises/html/css/styleintro.css
+++ b/le_journal_des_entreprises/html/css/styleintro.css
@@ -1,27 +1,45 @@
 /***************
  * Intro Panel *
  ***************/
- 
- #intropage1
+ .page
  {
- 	background-image:url('/images/la1.png');
- 	width:100%;
- 	height:100%;
+     
+    width: 100%;
+    height: 900px;
+ }
+
+
+#slide1
+ { 
+    background-color: #223148;  
+    background-attachment:fixed;
  }
  
-  #intropage2
+#slide2
  {
- 	background-image:url('/images/la2.png');
- 	 	width:100%;
- 	 	height:100%;
+    background-image: url(/images/Slide-2.png);     
+    background-attachment:fixed;
  }
  
- .arrow{
-	opacity:0.2;
+ .slide_inside {
+	width: 980px;
+	margin: 0 auto;
 }
 
-.control{
-	position:fixed;
+.bottomArrow{
+    height:60px;
+	opacity:1;
+}
+
+.bottomControl{
+    width:145px;
+    left:45%;
+    bottom:0px;
 	width:170px;
 	cursor:pointer;
+}
+
+#nav1
+{
+     
 }
