--- a/le_journal_des_entreprises/html/css/sidebar.css
+++ b/le_journal_des_entreprises/html/css/sidebar.css
@@ -81,7 +81,7 @@
 .sidebar-nav div a:hover {
     text-decoration: none;
     color: #fff;
-    /*background: rgba(255,255,255,0.2);*/
+    background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav div a:active,
@@ -93,6 +93,7 @@
     height: 65px;
     font-size: 18px;
     line-height: 60px;
+    background-color : black;
 }
 
 .sidebar-nav > .sidebar-brand a {
@@ -101,7 +102,7 @@
 
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
-    background: none;
+    background: black;
 }
 
 .townChoice , .townChoice div {
