--- a/le_journal_des_entreprises/html/css/slider.css
+++ b/le_journal_des_entreprises/html/css/slider.css
@@ -76,7 +76,7 @@
 .slider-track {
   position: absolute;
   cursor: pointer;
-  background-color: #f7f7f7;
+  background-color: #f7f7f7 !important;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
@@ -87,7 +87,7 @@
 
 .slider-selection {
   position: absolute;
-  background-color: #f7f7f7;
+  background-color: #f7f7f7 !important;
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
@@ -96,7 +96,7 @@
   position: absolute;
   width: 20px;
   height: 20px;
-  background-color: #0e90d2;
+  background-color: #505051 !important;
   box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   /*opacity: 0.8;*/
 }
