--- a/le_journal_des_entreprises/html/css/styleoutro.css
+++ b/le_journal_des_entreprises/html/css/styleoutro.css
@@ -2,7 +2,7 @@
  * Outro Panel *
  ***************/
  
-#over
+#slideoutro
 {
     position:absolute;
     width:100%;
@@ -21,15 +21,36 @@
     display: inline-block;
     vertical-align: middle;
 }
+.page
+{
+ width: 100%;
+ height: 100%;
+ min-height:100%;
+ display: block; 
+ position: relative;
+}
+
+#titleoutro
+{
+    text-align:center;
+}
+
+#pics
+{
+    display:inline-block;
+    vertical-align: middle;
+}
 
 #casierl
 {
-    vertical-align:middle;
     position: relative;
 }
 
 #casierr
 {
-    vertical-align:middle;
     position: relative;
+}
+
+#coatrack
+{
 }
