--- a/le_journal_des_entreprises/html/css/dataviz1.css
+++ b/le_journal_des_entreprises/html/css/dataviz1.css
@@ -19,41 +19,38 @@ font-weight: normal;
 src: local('Bebas Neue'), url('/fonts/BebasNeue.otf') format('otf');
 }
 
-#dataviz1
-{
+/***************
+ * Dataviz1 Panel *
+ ***************/
+ 
+ #dataviz1
+{ 
+ background-color: #213146;  
+ text-align:center;
  color: white;   
 }
 
-#dataviz1 .chiffreAnnee
-{
-    width:24px;
-    height:35px;
-    background-image: url('/images/backYear.png');
-    background-size: 24px 35px;
-    display: inline-block;
-    margin-left: -5px;
-}
 
-#headD1
+.headD1
 {
     font-family:'Myriad Pro Condensed', sans-serif;
     height: 97px;
 }
 
 
-#headD1 h1
+.headD1 h1
 {
  color: #EBAC44;    
  font-size: 15pt;
 }
 
-#titleD1
+.titleD1
 {
  display: inline-block;
  float:left;
 }
 
-#titleD1 p
+.titleD1 p
 {
  margin-top:-10px;
  font-family:'Myriad Pro Condensed Italic', sans-serif;
@@ -61,13 +58,13 @@ src: local('Bebas Neue'), url('/fonts/BebasNeue.otf') format('otf');
  text-align: left;
 }
 
-#cliquezIciD1 p
+.cliquezIciD1 p
 {
  font-family:'Myriad Pro Condensed', sans-serif;
  font-size: 14pt;
 }
 
-#selectionAnneeD1
+.selectionAnneeD1
 {
  display:inline-block;
  float:right;
@@ -78,7 +75,17 @@ src: local('Bebas Neue'), url('/fonts/BebasNeue.otf') format('otf');
  margin-top: 22px;
 }
 
-#selectionAnneeD1 .plusmoins
+.selectionAnneeD1 .chiffreAnnee
+{
+    width:24px;
+    height:35px;
+    background-image: url('/images/backYear.png');
+    background-size: 24px 35px;
+    display: inline-block;
+    margin-left: -5px;
+}
+
+.selectionAnneeD1 .plusmoins
 {
  display: inline-block;
  font-size: 16pt;
@@ -92,18 +99,19 @@ src: local('Bebas Neue'), url('/fonts/BebasNeue.otf') format('otf');
  /* ...and now for the proper property */
  transition: font-size 0.4s ease-out,font-size 0.4s ease-in;
 }
-#selectionAnneeD1 .plusmoins:hover
+
+.selectionAnneeD1 .plusmoins:hover
 {
   font-size: 20pt;
   cursor: pointer;
 }
 
-#selectionAnneeD1 .yearless
+.selectionAnneeD1 .yearless
 {
  margin-right: 5px;
 }
 
-#cliquezIciD1 p
+.cliquezIciD1 p
 {
  color: #F9F9FA;
  font-family: Myriad Pro Condensed, sans-serif;
