--- a/le_journal_des_entreprises/html/css/styledataviz2.css
+++ b/le_journal_des_entreprises/html/css/styledataviz2.css
@@ -71,7 +71,7 @@ html
 
 #dataviz2
 {
-	background:url("../images/Font des villes.png");
+	background-color : #213146;
  	width:100%;
  	height:100%;
  	margin-right:0px;
