update fonts and css

--- a/le_journal_des_entreprises/html/css/dataviz1.css
+++ b/le_journal_des_entreprises/html/css/dataviz1.css
@@ -28,6 +28,7 @@ src: local('Bebas Neue'), url('/fonts/BebasNeue.otf') format('otf');
  background-color: #213146;  
  text-align:center;
  color: white;   
+ overflow-x : hidden;
 }
 
 
