Fixes for JDE project

--- a/le_journal_des_entreprises/html/css/salariesNum.css
+++ b/le_journal_des_entreprises/html/css/salariesNum.css
@@ -98,7 +98,7 @@ background-color:#CBDADD;
  display: inline-block;
  height: 99%;
  width: 10%;
- background-image: url('/images/Sac-de-frappe-1.png');
+ background-image: url('../images/Sac-de-frappe-1.png');
  background-repeat: no-repeat;
  margin-left: 5px;
 }
