--- a/le_journal_des_entreprises/html/css/interactiveTab.css
+++ b/le_journal_des_entreprises/html/css/interactiveTab.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'bebasregular';
-    src: url('BEBAS___-webfont.eot');
-    src: url('BEBAS___-webfont.eot?#iefix') format('embedded-opentype'),
-    url('BEBAS___-webfont.woff') format('woff'),
-    url('BEBAS___-webfont.ttf') format('truetype'),
-    url('BEBAS___-webfont.svg#bebasregular') format('svg');
+    src: url('../fonts/BEBAS___-webfont.eot');
+    src: url('../fonts/BEBAS___-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/BEBAS___-webfont.woff') format('woff'),
+    url('../fonts/BEBAS___-webfont.ttf') format('truetype'),
+    url('../fonts/BEBAS___-webfont.svg#bebasregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
