--- a/le_journal_des_entreprises/html/css/stylematchfinal.css
+++ b/le_journal_des_entreprises/html/css/stylematchfinal.css
@@ -12,7 +12,7 @@
     position:absolute;
     top:0px;
     left:20%;
-    background-image: url("/images/BlueBanner.png");
+    background-image: url("../images/BlueBanner.png");
     background-repeat: no-repeat;
 	background-position: absolute; 
  }
@@ -21,7 +21,7 @@
  {
     position:relative;
     text-align:center;
-    background-image: url(/images/Podium.png);   
+    background-image: url("../images/Podium.png");   
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;  
