--- a/le_journal_des_entreprises/html/css/stylematchfinal.css
+++ b/le_journal_des_entreprises/html/css/stylematchfinal.css
@@ -6,7 +6,7 @@
  {
     position:relative;
  }
- 
+ /*
  #bandeaupodium
  {
     position:absolute;
@@ -26,7 +26,7 @@
     background-attachment: fixed;
     background-position: center;  
  }
- 
+ */
  #stars
  {
      margin-right:5%;
