--- a/nantes.fr/css/jquery.bxslider.css
+++ b/nantes.fr/css/jquery.bxslider.css
@@ -107,14 +107,14 @@
 	width: 100%;
 	height: auto;
 	left: 10px;
-	background: url('../img/img3/bouton_gauche.png') no-repeat center;
+	background: url('../img/stats/tranche_age/bouton_gauche.png') no-repeat center;
 }
 
 .bx-wrapper .bx-next {
 	width: 100%;
 	height: auto;
 	right: 10px;
-	background: url('../img/img3/bouton_droit.png') no-repeat center;
+	background: url('../img/stats/tranche_age/bouton_droit.png') no-repeat center;
 }
 
 /*.bx-wrapper .bx-prev:hover {
