--- a/le_journal_des_entreprises/html/css/styleoutro.css
+++ b/le_journal_des_entreprises/html/css/styleoutro.css
@@ -10,47 +10,20 @@
     text-align: center;
     background-color:#EAAC42;
 }
-.Centerer
-{
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-}
-.Centered
-{
-    display: inline-block;
-    vertical-align: middle;
-}
-.page
-{
- width: 100%;
- height: 100%;
- min-height:100%;
- display: block; 
- position: relative;
+
+#titleOutro {
+    text-align : center;
 }
 
-#titleoutro
-{
-    text-align:center;
-}
-
-#pics
-{
-    display:inline-block;
-    vertical-align: middle;
-}
-
-#casierl
-{
-    position: relative;
-}
-
-#casierr
-{
-    position: relative;
-}
-
-#coatrack
-{
+@media screen and (max-width: 1200px) {
+    .vestiaires {
+        width: 100%;
+    }
+    #titleOutro {
+        text-align: center;
+    }
+    #titleOutro img {
+        width: 50%;
+    }
+    
 }
