--- a/nantes.fr/css/index.css
+++ b/nantes.fr/css/index.css
@@ -80,7 +80,7 @@ section
 /*CSS concernant le premier slide*/
 #slide1
 {
-	background: url('../img/index/background_index_1.jpg') no-repeat center ;
+	background: url('../img/index/background_index_1Bis.jpg') no-repeat center ;
 	background-size: cover;
 }
 
@@ -724,6 +724,7 @@ section
 	display: inline-block;
 	margin-left: 2.5%;
 	margin-right: 2.5%;
+	vertical-align: middle;
 	width: 12%;
 }
 
@@ -769,11 +770,18 @@ section
 	top: 3%;
 	right: 3%;
 }
+
+.enSavoirPlus
+{
+	position: absolute;
+	left: 60%;
+	width: 3%;
+	height: auto;
+	margin-top: 1%;
+}
 /*CSS concernant le slide "crédits"*/
 #credits
 {
-	padding: 0px;
-	margin: 0px;
 	width: 100%;
 	height: 100%;
 	background: url('../img/credits/credits_1.jpg') no-repeat center;
@@ -782,7 +790,9 @@ section
 
 #creditsBis
 {
-	background: url('../img/credits/credits_2.jpg') no-repeat center ;
+	width: 100%;
+	height: 100%;
+	background: url('../img/credits/credits2_bis.jpg') no-repeat center ;
 	background-size: cover;
 }
 
@@ -798,18 +808,9 @@ section
 .logos
 {
 	position: absolute;
-	width: 25%;
+	width: 20%;
 	top: 30%;
 	height: 100%;
-}
-
-.enSavoirPlus
-{
-	position: absolute;
-	left: 60%;
-	width: 3%;
-	height: auto;
-	margin-top: 1%;
 }
 
 .logo_container_bis
@@ -833,28 +834,28 @@ section
 {
 	background: url('../img/credits/NANTESFR.png') no-repeat center;
 	background-size: contain;
-	left: 0%;
+	left: 5%;
 }
 
 #AGR
 {
 	background: url('../img/credits/AGR.png') no-repeat center;
 	background-size: contain;
-	left: 25%;
+	left: 30%;
 }
 
 #Polytech
 {
 	background: url('../img/credits/POLYTECH.png') no-repeat center;
 	background-size: contain;
-	left: 50%;
+	left: 55%;
 }
 
 #SciencesCom
 {
 	background: url('../img/credits/logo-sciencecom.png') no-repeat center;
 	background-size: contain;
-	left: 75%;
+	left: 80%;
 }
 
 #facebook
