--- a/le_journal_des_entreprises/html/css/salariesNum.css
+++ b/le_journal_des_entreprises/html/css/salariesNum.css
@@ -102,3 +102,14 @@ background-color:#CBDADD;
  background-repeat: no-repeat;
  margin-left: 5px;
 }
+
+.cliquezIciD2 {
+ margin-top : 45px;
+ color: #F9F9FA;
+ font-family: 'Myriad Pro Condensed', sans-serif;
+ font-size: 15pt;
+}
+
+.titleD1 {
+ text-align : left;
+}
