--- a/le_journal_des_entreprises/html/css/salariesNum.css
+++ b/le_journal_des_entreprises/html/css/salariesNum.css
@@ -78,7 +78,6 @@ background-color:#CBDADD;
 }
 
 #xlabelS{
- padding-left: 4%;
  margin-top: 5px;
 }
 #xlabelS p
@@ -86,7 +85,8 @@ background-color:#CBDADD;
  display: inline-block;
  color: #E9AE28;
  font-size: 11pt;
- margin-right: 45px;
+ width: 10%;
+ margin-left: 5px;
 }
 
 .punch
@@ -111,7 +111,8 @@ background-color:#CBDADD;
 {
  position: absolute;
  top: 55%;
- left: 10%;
+ text-align: center;
+ width: 100%;
  font-size: 20pt;
 }
 .punch p span
@@ -136,6 +137,13 @@ background-color:#CBDADD;
 @media screen and (max-width: 1230px) {
    .headD1 {
      margin-top: 0px;
+   }
+}
+
+@media screen and (max-width: 1205px) {
+   .punch p span {
+     display: block;
+     text-align: center
    }
 }
 
